services section fix color contrast

--- a/style/_section.scss
+++ b/style/_section.scss
@@ -49,7 +49,8 @@
                 font-family: Poppins, sans-serif;
                 font-weight: 500;
                 font-size: 16px;
-                color: #828282;
+                // color: #828282;
+                color: #4F4F4F;
                 padding: .25rem;
                 width: 7.25rem;
                 border-radius: .75rem;
@@ -70,7 +71,8 @@
             }
 
             .arrows {
-                background: #27ae60;
+                // background: #27ae60;
+                background: #1E8549;
                 
                 .left {
                     margin-right: -.30rem;
